--- a/masha/css/my_style.css
+++ b/masha/css/my_style.css
@@ -1,4 +1,4 @@
-h5 /* Стиль для сообщений пользователя */
+h5 /* Стиль для сообщений пользователя (зеленый) */
     {
         font-weight: normal;
         font-size: 16;
@@ -12,7 +12,7 @@ h5 /* Стиль для сообщений пользователя */
         margin-left: auto; margin-right: 10px;
         margin-top: 3px; margin-bottom: 3px;
     }
-h6 /* Стиль для сообщений других пользователей */
+h6 /* Стиль для сообщений других пользователей (серый) */
     {   
         font-weight: normal;
         font-size: 16;
